# cmake-blog-4

./: CMakeLists.txt  README.md  build.bat  build.ps1  build.sh  configure.bat  toolchain-STM32F407.cmake
ldscripts/: sections.ld
middleware/: CMakeLists.txt
middleware/FreeRTOSv202012.00/FreeRTOS/Source/: timers.c
middleware/FreeRTOSv202012.00/FreeRTOS/Source/portable/GCC/ARM_CM3/: port.c
middleware/cortex_m4_config/: FreeRTOSConfig.h
src/: controller.cpp  controller.h  devices.cpp  devices.h  main.cpp
system/: CMakeLists.txt
system/include/arm/: semihosting.h
system/include/cmsis/: core_cm0.h  core_cm0plus.h  core_cm3.h  core_cm4.h  core_cmFunc.h  core_sc000.h  core_sc300.h  stm32f4xx.h
system/src/cmsis/: system_stm32f4xx.c
system/src/cortexm/: _initialize_hardware.c  exception_handlers.c
system/src/diag/: trace_impl.c
system/src/newlib/: __dso_handle.c  _syscalls.c
